<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="org.fasol.mambiance.EditActivity">


    <TextView
        android:id="@+id/parameters_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/address_title"
        android:textSize="24sp"
        tools:text="Addresse associée ?" />


    <LinearLayout
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/text_numero"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/ad_num" />

        <EditText
            android:id="@+id/a_numero"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_weight="0.2"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/text_rue"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/ad_street" />

        <EditText
            android:id="@+id/a_rue"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_weight="0.2"
            android:text="" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/text_ville"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:layout_marginLeft="2dp"
            android:text="@string/ad_city" />

        <EditText
            android:id="@+id/a_ville"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_weight="0.2"
            android:text="" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/text_codepostal"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:layout_marginLeft="2dp"
            android:text="@string/ad_postalcode" />

        <EditText
            android:id="@+id/a_codepostal"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_weight="0.2"
            android:text="" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/text_pays"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:layout_marginLeft="2dp"
            android:text="@string/ad_country" />

        <EditText
            android:id="@+id/a_pays"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_weight="0.2"
            android:text="" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/text_complement"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:layout_marginLeft="2dp"
            android:text="@string/ad_compl" />

        <EditText
            android:id="@+id/a_complement"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_weight="0.2"
            android:text="" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="1">



    </LinearLayout>




</LinearLayout>