<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="org.fasol.mambiance.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight=".3">

        <LinearLayout
            android:id="@+id/form_cursor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5">

            <LinearLayout
                android:id="@+id/form_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/site_name"
                    android:textSize="24sp" />
                <EditText
                    android:id="@+id/edit_site_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:textSize="24sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/evaluate"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="10"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:background="@drawable/border">

                <TextView
                    android:id="@+id/caract1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="adjectif 1"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical"
                    android:textSize="18sp" />
                <SeekBar
                    android:id="@+id/cursor1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="10"
                    android:progress="5" />
                <TextView
                    android:id="@+id/caract2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="adjectif 2"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical"
                    android:textSize="18sp" />
                <SeekBar
                    android:id="@+id/cursor2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="10"
                    android:progress="5" />
                <TextView
                    android:id="@+id/caract3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="adjectif 3"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical"
                    android:textSize="18sp" />
                <SeekBar
                    android:id="@+id/cursor3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="10"
                    android:progress="5" />

            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/frame_layout_rose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <include layout="@layout/rose_ambiance"
                android:id="@+id/rose_ambiance_curseurs"/>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0.8">

        <Button
            android:id="@+id/btn_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:text="Photo"
            android:drawableTop="@mipmap/ic_photo"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/photo_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:visibility="gone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/description"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textSize="24sp"
            android:hint="mot1, mot2, mot3, ..."/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp" />

</LinearLayout>